--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,6 @@
-app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+# This file is part of the NuCms package.
+# (c) Jacek Bednarek
+
+nugato_nu_cms:
+    resource: "@NugatoNuCmsBundle/Resources/config/routing.yml"
+    prefix:   /
