--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,19 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "behat/behat": "^3.2",
+        "behat/mink": "^1.7",
+        "behat/mink-extension": "^2.2",
+        "behat/mink-goutte-driver": "^1.2",
+        "behat/mink-selenium2-driver": "^1.3",
+        "behat/symfony2-extension": "^2.1",
+        "lakion/api-test-case": "^2.0",
+        "phpspec/phpspec": "^4.0",
+        "phpunit/phpunit": "^6.4",
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "sensiolabs/behat-page-object-extension": "^2.0",
+        "symfony/phpunit-bridge": "^3.0",
+        "webmozart/assert": "^1.2"
     },
     "scripts": {
         "symfony-scripts": [
@@ -48,6 +59,7 @@
     },
     "autoload": {
         "psr-4": {
+            "Nugato\\Behat\\": "src/Nugato/Behat/",
             "Nugato\\Bundle\\": "src/Nugato/Bundle/"
         },
         "exclude-from-classmap": [
