--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,9 +29,7 @@ framework:
     default_locale: '%locale%'
     trusted_hosts: ~
     session:
-        # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
-        handler_id: session.handler.native_file
-        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
+        handler_id: ~
     fragments: ~
     http_method_override: true
     assets: ~
