--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,6 +15,7 @@
     <testsuites>
         <testsuite name="Project Test Suite">
             <directory>tests</directory>
+            <directory>src/Nugato/Bundle/NuCmsBundle/Tests</directory>
         </testsuite>
     </testsuites>
 
