Integrate SyliusGridBundle and create sample Page CRUD

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/config.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/config.yml
@@ -4,6 +4,7 @@
 imports:
     - { resource: "@NugatoNuCmsBundle/Resources/config/services.yml" }
     - { resource: "@NugatoNuCmsBundle/Resources/config/resources.yml" }
+    - { resource: "@NugatoNuCmsBundle/Resources/config/grids/grids.yml" }
 
 fos_rest:
     exception: ~
