--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Page.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Page.orm.yml
@@ -1,6 +1,9 @@
+# This file is part of the NuCms package.
+# (c) Jacek Bednarek
+
 Nugato\Bundle\NuCmsBundle\Entity\Page:
     type: entity
-    table: null
+    table: nucms_page
     repositoryClass: Nugato\Bundle\NuCmsBundle\Repository\PageRepository
     id:
         id:
