--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "sylius/grid-bundle": "^1.0",
         "sylius/resource-bundle": "^1.0",
+        "sylius/user-bundle": "^1.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
