Behat login test

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -1,3 +1,6 @@
+# This file is part of the NuCms package.
+# (c) Jacek Bednarek
+
 imports:
     - { resource: config_dev.yml }
 
@@ -14,3 +17,7 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+doctrine:
+    dbal:
+        dbname: "%database_name%_test"
