--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,7 +11,7 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: en_US
 
 framework:
     #esi: ~
