--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,7 +29,7 @@ security:
                 csrf_token_id: admin_authenticate
             remember_me:
                 secret: "%secret%"
-                path: /admin
+                path: /admin/
                 name: APP_ADMIN_REMEMBER_ME
                 lifetime: 31536000
                 remember_me_parameter: _remember_me
@@ -44,7 +44,8 @@ security:
 
     access_control:
         - { path: "%sylius.security.admin_regex%/login", role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: "%sylius.security.admin_regex%", role: ROLE_ADMINISTRATION_ACCESS }
+        - { path: "%sylius.security.admin_regex%", role: ROLE_ADMIN }
+#        - { path: "%sylius.security.admin_regex%", role: ROLE_ADMINISTRATION_ACCESS }
 #security:
 #
 #    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
