--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "behat/mink-goutte-driver": "^1.2",
         "behat/mink-selenium2-driver": "^1.3",
         "behat/symfony2-extension": "^2.1",
-        "lakion/api-test-case": "^2.0",
+        "doctrine/doctrine-fixtures-bundle": "^2.4",
+        "nelmio/alice": "^2.2",
         "phpspec/phpspec": "^4.0",
         "phpunit/phpunit": "^6.4",
         "sensio/generator-bundle": "^3.0",
