--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "behat/mink-selenium2-driver": "^1.3",
         "behat/symfony2-extension": "^2.1",
         "doctrine/doctrine-fixtures-bundle": "^2.4",
+        "lakion/api-test-case": "^2.0",
         "nelmio/alice": "^2.2",
         "phpspec/phpspec": "^4.0",
         "phpunit/phpunit": "^6.4",
