--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,11 @@ cache:
 install:
     - composer update
 
+before_script:
+    - bin/console doctrine:schema:create --env=test
+    - bin/console assets:install web --env=test
+
 script:
     - composer validate --strict
     - bin/phpspec run --no-interaction -f dot
+    - bin/behat --strict -vvv --no-interaction || bin/behat --strict -vvv --no-interaction --rerun
