Update travis for mysql

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ install:
     - composer update
 
 before_script:
+    - cp app/config/parameters.yml.travis app/config/parameters.yml
+    - bin/console doctrine:database:create --env=test
     - bin/console doctrine:schema:create --env=test
     - bin/console assets:install web --env=test
 
