--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ before_script:
 
     # Run webserver
     - bin/console server:run 127.0.0.1:8080 -d web --env=test --quiet > /dev/null 2>&1
+    - bin/console server:run 127.0.0.1:8080 -d web --env=test --quiet > /dev/null 2>&1 &
 
 script:
     - composer validate --strict
