--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "sylius/grid-bundle": "^1.0",
+        "sylius/locale-bundle": "^1.0",
         "sylius/resource-bundle": "^1.0",
         "sylius/user-bundle": "^1.0",
         "symfony/monolog-bundle": "^3.1.0",
