--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources.yml
@@ -1,13 +1,7 @@
 # This file is part of the NuCms package.
 # (c) Jacek Bednarek
 
-sylius_resource:
-    resources:
-        nucms.page:
-            driver: doctrine/orm
-            classes:
-                model: Nugato\Bundle\NuCmsBundle\Entity\Page
-        nucms.user:
-            driver: doctrine/orm
-            classes:
-                model: Nugato\Bundle\NuCmsBundle\Entity\User\User
+imports:
+    - { resource: 'resources/user.yml' }
+    - { resource: 'resources/locale.yml' }
+    - { resource: 'resources/page.yml' }
