--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/services.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/services.yml
@@ -1,7 +1,5 @@
 # This file is part of the NuCms package.
 # (c) Jacek Bednarek
 
-services:
-#    nugato_nu_cms.example:
-#        class: Nugato\Bundle\NuCmsBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+imports:
+    - { resource: "services/locale.yml" }
