Create translatable admin entity and configurate locale management for web/admin

--- a/src/Nugato/Bundle/NuCmsBundle/DataFixtures/ORM/Locale.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/DataFixtures/ORM/Locale.yml
@@ -5,4 +5,4 @@ Nugato\Bundle\NuCmsBundle\Entity\Locale:
     locale_enUS:
         code: en_US
     locale_pl:
-        code: pl_PL
+        code: pl
