Fix behat for trafix

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ cache:
         - NUCMS_CACHE_DIR
 
 install:
-    - composer update
+    - composer install
 
 before_script:
     # Create config files
