--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "require-dev": {
         "behat/behat": "^3.2",
         "behat/mink": "^1.7",
-        "behat/mink-extension": "^2.2",
+        "behat/mink-browserkit-driver": "^1.3",
+        "behat/mink-extension": "^2.3",
         "behat/mink-goutte-driver": "^1.2",
         "behat/mink-selenium2-driver": "^1.3",
         "behat/symfony2-extension": "^2.1",
