First try of CRUD layout

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Page.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Page.orm.yml
@@ -11,4 +11,16 @@ Nugato\Bundle\NuCmsBundle\Entity\Page:
             id: true
             generator:
                 strategy: AUTO
+    fields:
+        createdAt:
+            type: datetime
+            gedmo:
+                timestampable:
+                    on: create
+        updatedAt:
+            type: datetime
+            nullable: true
+            gedmo:
+                timestampable:
+                    on: update
     lifecycleCallbacks: {  }
