Add content field to page entity

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/PageTranslation.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/PageTranslation.orm.yml
@@ -14,4 +14,7 @@ Nugato\Bundle\NuCmsBundle\Entity\PageTranslation:
         title:
             type: string
             length: 255
+        content:
+            type: text
+            nullable: true
     lifecycleCallbacks: {  }
