--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids/admin/page.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids/admin/page.yml
@@ -35,7 +35,11 @@ sylius_grid:
                 item:
                     update:
                         type: update
-                        label: nucms.ui.edit
                         enabled: true
                         position: 100
+                        options: { }
+                    delete:
+                        type: delete
+                        enabled: true
+                        position: 101
                         options: { }
