--- a/src/Nugato/Behat/Resources/config/profiles/default.yml
+++ b/src/Nugato/Behat/Resources/config/profiles/default.yml
@@ -4,7 +4,7 @@
 default:
     extensions:
         Behat\MinkExtension:
-            base_url: http://nucms.dev/app_test.php
+            base_url: http://nucms.dev/
             goutte: ~
             browser_name: chrome
             selenium2:
@@ -14,11 +14,16 @@ default:
                 my_session:
                     symfony2: ~
 
+            default_session: my_session
+            javascript_session: selenium2
+
         Behat\Symfony2Extension:
             kernel:
                 class: AppKernel
                 path: app/AppKernel.php
                 bootstrap: vendor/autoload.php
+                env: test
+                debug: true
 
         SensioLabs\Behat\PageObjectExtension: ~
 
