--- a/src/Nugato/Behat/Resources/config/profiles/travis.yml
+++ b/src/Nugato/Behat/Resources/config/profiles/travis.yml
@@ -4,7 +4,7 @@
 default:
     extensions:
         Behat\MinkExtension:
-            base_url: http://127.0.0.1:8080/app_test.php
+            base_url: http://127.0.0.1:8080/
             goutte: ~
             browser_name: chrome
             selenium2:
