Displaying single page on frontend

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/PageTranslation.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/PageTranslation.orm.yml
@@ -30,5 +30,5 @@ Nugato\Bundle\NuCmsBundle\Entity\PageTranslation:
                         - title
     indexes:
         search_idx:
-            columns: title, slug
+            columns: title, slug, locale
     lifecycleCallbacks: {  }
