--- a/src/Nugato/Behat/Resources/config/suites.yml
+++ b/src/Nugato/Behat/Resources/config/suites.yml
@@ -2,5 +2,9 @@
 # (c) Jacek Bednarek
 
 imports:
+    #admin
     - suites/ui/admin/security.yml
     - suites/ui/admin/managing_pages.yml
+
+    #web
+    - suites/ui/web/displaying_pages.yml
