--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/services.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/services.yml
@@ -2,6 +2,7 @@
 # (c) Jacek Bednarek
 
 imports:
+    - { resource: "services/controller.yml" }
     - { resource: "services/locale.yml" }
     - { resource: "services/page.yml" }
 
