--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources/taxon.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources/taxon.yml
@@ -7,9 +7,11 @@ sylius_resource:
             driver: doctrine/orm
             classes:
                 model: Nugato\Bundle\NuCmsBundle\Entity\Taxon
+                form: Sylius\Bundle\TaxonomyBundle\Form\Type\TaxonType
             translation:
                 classes:
                     model: Nugato\Bundle\NuCmsBundle\Entity\TaxonTranslation
+                    form: Sylius\Bundle\TaxonomyBundle\Form\Type\TaxonTranslationType
 
 sylius_taxonomy:
     driver: doctrine/orm
