--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "sylius/grid-bundle": "^1.0",
         "sylius/locale-bundle": "^1.0",
         "sylius/resource-bundle": "^1.0",
-        "sylius/taxonomy-bundle": "v1.0",
+        "sylius/taxonomy-bundle": "^1.0",
         "sylius/user-bundle": "^1.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
