--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/admin/taxon.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/admin/taxon.yml
@@ -1,6 +1,18 @@
 # This file is part of the NuCms package.
 # (c) Jacek Bednarek
 
+# Partial - tree
+nucms_admin_partial_taxon_tree:
+    path: /taxons/tree
+    methods: [GET]
+    defaults:
+        _controller: sylius.controller.taxon:indexAction
+        _sylius:
+            template: $template
+            repository:
+                method: findRootNodes
+            permission: true
+
 nucms_admin_taxon:
     type: sylius.resource
     resource: |
