--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/services.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/services.yml
@@ -5,6 +5,7 @@ imports:
     - { resource: "services/controller.yml" }
     - { resource: "services/locale.yml" }
     - { resource: "services/page.yml" }
+    - { resource: "services/navigation.yml" }
 
 services:
     pagerfanta.view.uikit:
